sqsh-rs/tests/all/snapshots/example__all__path_resolver__first_file.snap
---
source: sqsh-rs/tests/all/path_resolver.rs
expression: resolver
---
PathResolver {
    current_name: Some(
        "1MiB.file",
    ),
    current_file_type: Some(
        File,
    ),
    current_dir_inode: Inode(
        23,
    ),
    current_dir_inode_ref: InodeRef(
        0x0000_00000000_0000,
    ),
    current_file: Ok(
        File {
            file_type: Some(
                File,
            ),
            permissions: Permissions(
                0x0,
            ),
            inode_ref: InodeRef(
                0x0000_00000000_0000,
            ),
            is_extended: false,
            hard_link_count: 1,
            size: 1048576,
            inode: Inode(
                1,
            ),
            parent_inode: Inode(
                4294967295,
            ),
            modified_time: 1000,
            symlink_path: None,
            device_id: 4294967295,
            uid: 0,
            gid: 0,
            xattr_id: 4294967295,
        },
    ),
    ..
}
