sqsh-rs/tests/all/snapshots/example__all__path_resolver__first_subdir_file.snap
---
source: sqsh-rs/tests/all/path_resolver.rs
expression: resolver
---
PathResolver {
    current_name: Some(
        "one.file",
    ),
    current_file_type: Some(
        File,
    ),
    current_dir_inode: Inode(
        20,
    ),
    current_dir_inode_ref: InodeRef(
        0x0000_00000000_0275,
    ),
    current_file: Ok(
        File {
            file_type: Some(
                File,
            ),
            permissions: Permissions(
                UserRead | UserWrite | GroupRead | OtherRead,
            ),
            inode_ref: InodeRef(
                0x0000_00000000_0275,
            ),
            is_extended: false,
            hard_link_count: 1,
            size: 1,
            inode: Inode(
                21,
            ),
            parent_inode: Inode(
                4294967295,
            ),
            modified_time: 1000,
            symlink_path: None,
            device_id: 4294967295,
            uid: 100,
            gid: 100,
            xattr_id: 4294967295,
        },
    ),
    ..
}
