sqsh-rs/tests/all/snapshots/example__all__path_resolver__root.snap
---
source: sqsh-rs/tests/all/path_resolver.rs
expression: resolver
---
PathResolver {
    current_name: None,
    current_file_type: Some(
        Directory,
    ),
    current_dir_inode: Inode(
        24,
    ),
    current_dir_inode_ref: InodeRef(
        0x0000_00000000_02D5,
    ),
    current_file: Ok(
        File {
            file_type: Some(
                Directory,
            ),
            permissions: Permissions(
                UserRead | UserWrite | UserExec,
            ),
            inode_ref: InodeRef(
                0x0000_00000000_02D5,
            ),
            is_extended: false,
            hard_link_count: 6,
            size: 216,
            inode: Inode(
                23,
            ),
            parent_inode: Inode(
                24,
            ),
            modified_time: 1000,
            symlink_path: None,
            device_id: 4294967295,
            uid: 22,
            gid: 33,
            xattr_id: 4294967295,
        },
    ),
    ..
}
